##########################
# Setup.py Configuration #
##########################
[metadata]
name = torch_max_mem
version = 0.0.5-dev
description = Maximize memory utilization with PyTorch.
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/mberr/torch-max-mem
download_url = https://github.com/mberr/torch-max-mem/releases
project_urls =
    Bug Tracker = https://github.com/mberr/torch-max-mem/issues
    Source Code = https://github.com/mberr/torch-max-mem

# Author information
author = Max Berrendorf
author_email = max.berrendorf@gmail.com
maintainer = Max Berrendorf
maintainer_email = max.berrendorf@gmail.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
keywords =
    snekpack
    cookiecutter
    torch

[options]
install_requires =
    numpy
    torch

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    coverage
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints
    sphinx_automodapi
    # To include LaTeX comments easily in your docs. 
    # If you uncomment this, don't forget to do the same in docs/conf.py
    # texext

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = torch_max_mem
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/torch_max_mem
    .tox/*/lib/python*/site-packages/torch_max_mem

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short
